--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
-  <body>
-    Does blzimg.github.io work for a webpage?
-  </body>
+<head>
+</head>
+<body>
+Does blzimg.github.io work for a webpage?
+I changed my account info in Github Desktop, then removed all repositories, then told it to sync github repo to my system. Seems like it worked.
+</body>
 </html>
