--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
+<title>CKB Part 2</title>
+<link rel="stylesheet" href="ZimStyles.css">
 </head>
 <body>
 Does blzimg.github.io work for a webpage?
-I changed my account info in Github Desktop, then removed all repositories, then told it to sync github repo to my system. Seems like it worked.
+I changed my account info in Github Desktop, then removed all repositories, then told it to sync github repo to my system. Seems like it worked. Copied my css file too.
 </body>
 </html>
