--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>CKB Part 2</title>
+<title>Creative Knowledge Base</title>
 <link rel="stylesheet" href="ZimStyles.css">
 </head>
 <body>
-Does blzimg.github.io work for a webpage?
-I changed my account info in Github Desktop, then removed all repositories, then told it to sync github repo to my system. Seems like it worked. Copied my css file too.
+<a href="blzim.github.io/kb/kb.html">Creative Knowledge Base</a>
 </body>
 </html>
