--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <link rel="stylesheet" href="ZimStyles.css">
 </head>
 <body>
-<a href="blzim.github.io/kb/kb.html">Creative Knowledge Base</a>
+<a href="https://blzim.github.io/kb/kb.html">Creative Knowledge Base</a>
 </body>
 </html>
