--- a/Hellblazer/Hellblazer.html
+++ b/Hellblazer/Hellblazer.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../../../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Hellblazer</title>
 </head>
 
@@ -18,6 +19,25 @@ Hellblazer had been published continuously since January 1988, and was Vertigo's
 </p><p>
 The series was the longest-running and one of the most successful titles of DC's Vertigo imprint, and was the stepping stone to many British writers. Notable writers who have contributed to the series include Jamie Delano, Garth Ennis, Paul Jenkins, Warren Ellis, Grant Morrison, Neil Gaiman, Brian Azzarello, Mike Carey, Andy Diggle, and Peter Milligan. Hellblazer was one of the first modern occult detective fiction works and heavily influenced the genre to come.
 </p>
+</p><p>
+<div class="row">
+<div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div>
+</div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer072.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
 Issues:<ul>
 <li><a href="Hellblazer.html">Hellblazer #1</li>
 <li><a href="Hellblazer002.html">Hellblazer #2</li>
