--- a/Hellblazer/Hellblazer.html
+++ b/Hellblazer/Hellblazer.html
@@ -32,15 +32,31 @@ The series was the longest-running and one of the most successful titles of DC's
 
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer001.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer010.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer072.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 
-Issues:<ul>
-<li><a href="Hellblazer.html">Hellblazer #1</li>
+<ul>
+<li><a href="Hellblazer001.html">Hellblazer #1</li>
 <li><a href="Hellblazer002.html">Hellblazer #2</li>
+<li><a href="Hellblazer003.html">Hellblazer #3</li>
+<li><a href="Hellblazer004.html">Hellblazer #4</li>
+<li><a href="Hellblazer005.html">Hellblazer #5</li>
+<li><a href="Hellblazer006.html">Hellblazer #6</li>
+<li><a href="Hellblazer007.html">Hellblazer #7</li>
+<li><a href="Hellblazer008.html">Hellblazer #8</li>
+<li><a href="Hellblazer009.html">Hellblazer #9</li>
+<li><a href="Hellblazer010.html">Hellblazer #10</li>
 <li><a href="Hellblazer072.html">Hellblazer #72</li>
 </ul>
 </body>
