--- a/Hellblazer/Hellblazer002.html
+++ b/Hellblazer/Hellblazer002.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../../../ZimStyles.css">
+<link rel="stylesheet" href="../ZimStyles.css">
 <title>Hellblazer</title>
 </head>
 
@@ -11,10 +11,6 @@
 <img src="Hellblazer002.jpg">
 <p>
 </p>
-Issues:<ul>
-<li><a href="Hellblazer.html">Hellblazer #1</li>
-<li><a href="Hellblazer002.html">Hellblazer #2</li>
-<li><a href="Hellblazer072.html">Hellblazer #72</li>
-</ul>
+
 </body>
 </html>
