--- a/Hellblazer/Hellblazer.html
+++ b/Hellblazer/Hellblazer.html
@@ -40,6 +40,46 @@ The series was the longest-running and one of the most successful titles of DC's
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer008.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer009.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer020.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer021.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer022.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer023.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer024.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer025.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer026.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer027.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer028.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer029.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer030.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer031.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer032.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer033.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer034.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer035.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer036.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer037.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer038.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer039.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer040.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer041.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer042.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer043.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer044.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer045.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer046.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer047.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer048.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer049.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer050.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer072.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -57,6 +97,47 @@ The series was the longest-running and one of the most successful titles of DC's
 <li><a href="Hellblazer008.html">Hellblazer #8</li>
 <li><a href="Hellblazer009.html">Hellblazer #9</li>
 <li><a href="Hellblazer010.html">Hellblazer #10</li>
+<li><a href="Hellblazer011.html">Hellblazer #11</li>
+<li><a href="Hellblazer012.html">Hellblazer #12</li>
+<li><a href="Hellblazer013.html">Hellblazer #13</li>
+<li><a href="Hellblazer014.html">Hellblazer #14</li>
+<li><a href="Hellblazer015.html">Hellblazer #15</li>
+<li><a href="Hellblazer016.html">Hellblazer #16</li>
+<li><a href="Hellblazer017.html">Hellblazer #17</li>
+<li><a href="Hellblazer018.html">Hellblazer #18</li>
+<li><a href="Hellblazer019.html">Hellblazer #19</li>
+<li><a href="Hellblazer020.html">Hellblazer #20</li>
+<li><a href="Hellblazer021.html">Hellblazer #21</li>
+<li><a href="Hellblazer022.html">Hellblazer #22</li>
+<li><a href="Hellblazer023.html">Hellblazer #23</li>
+<li><a href="Hellblazer024.html">Hellblazer #24</li>
+<li><a href="Hellblazer025.html">Hellblazer #25</li>
+<li><a href="Hellblazer026.html">Hellblazer #26</li>
+<li><a href="Hellblazer027.html">Hellblazer #27</li>
+<li><a href="Hellblazer028.html">Hellblazer #28</li>
+<li><a href="Hellblazer029.html">Hellblazer #29</li>
+<li><a href="Hellblazer030.html">Hellblazer #30</li>
+<li><a href="Hellblazer031.html">Hellblazer #31</li>
+<li><a href="Hellblazer032.html">Hellblazer #32</li>
+<li><a href="Hellblazer033.html">Hellblazer #33</li>
+<li><a href="Hellblazer034.html">Hellblazer #34</li>
+<li><a href="Hellblazer035.html">Hellblazer #35</li>
+<li><a href="Hellblazer036.html">Hellblazer #36</li>
+<li><a href="Hellblazer037.html">Hellblazer #37</li>
+<li><a href="Hellblazer038.html">Hellblazer #38</li>
+<li><a href="Hellblazer039.html">Hellblazer #39</li>
+<li><a href="Hellblazer040.html">Hellblazer #40</li>
+<li><a href="Hellblazer041.html">Hellblazer #41</li>
+<li><a href="Hellblazer042.html">Hellblazer #42</li>
+<li><a href="Hellblazer043.html">Hellblazer #43</li>
+<li><a href="Hellblazer044.html">Hellblazer #44</li>
+<li><a href="Hellblazer045.html">Hellblazer #45</li>
+<li><a href="Hellblazer046.html">Hellblazer #46</li>
+<li><a href="Hellblazer047.html">Hellblazer #47</li>
+<li><a href="Hellblazer048.html">Hellblazer #48</li>
+<li><a href="Hellblazer049.html">Hellblazer #49</li>
+<li><a href="Hellblazer050.html">Hellblazer #50</li>
+
 <li><a href="Hellblazer072.html">Hellblazer #72</li>
 </ul>
 </body>
