--- a/Hellblazer/Hellblazer.html
+++ b/Hellblazer/Hellblazer.html
@@ -80,7 +80,56 @@ The series was the longest-running and one of the most successful titles of DC's
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer048.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer049.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer050.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer051.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer052.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer053.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer054.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer055.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer056.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer057.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer058.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer059.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer060.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer061.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer062.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer063.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer064.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer065.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer066.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer067.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer068.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer069.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer070.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer071.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Hellblazer072.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer073.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer074.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer075.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer076.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer077.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer078.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer079.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer080.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer081.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer082.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer083.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer084.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer085.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer086.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer087.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer088.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer089.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer090.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer091.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer092.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer093.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer094.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer095.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer096.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer097.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer098.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer099.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Hellblazer100.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -137,8 +186,57 @@ The series was the longest-running and one of the most successful titles of DC's
 <li><a href="Hellblazer048.html">Hellblazer #48</li>
 <li><a href="Hellblazer049.html">Hellblazer #49</li>
 <li><a href="Hellblazer050.html">Hellblazer #50</li>
-
+<li><a href="Hellblazer051.html">Hellblazer #51</li>
+<li><a href="Hellblazer052.html">Hellblazer #52</li>
+<li><a href="Hellblazer053.html">Hellblazer #53</li>
+<li><a href="Hellblazer054.html">Hellblazer #54</li>
+<li><a href="Hellblazer055.html">Hellblazer #55</li>
+<li><a href="Hellblazer056.html">Hellblazer #56</li>
+<li><a href="Hellblazer057.html">Hellblazer #57</li>
+<li><a href="Hellblazer058.html">Hellblazer #58</li>
+<li><a href="Hellblazer059.html">Hellblazer #59</li>
+<li><a href="Hellblazer060.html">Hellblazer #60</li>
+<li><a href="Hellblazer061.html">Hellblazer #61</li>
+<li><a href="Hellblazer062.html">Hellblazer #62</li>
+<li><a href="Hellblazer063.html">Hellblazer #63</li>
+<li><a href="Hellblazer064.html">Hellblazer #64</li>
+<li><a href="Hellblazer065.html">Hellblazer #65</li>
+<li><a href="Hellblazer066.html">Hellblazer #66</li>
+<li><a href="Hellblazer067.html">Hellblazer #67</li>
+<li><a href="Hellblazer068.html">Hellblazer #68</li>
+<li><a href="Hellblazer069.html">Hellblazer #69</li>
+<li><a href="Hellblazer070.html">Hellblazer #70</li>
+<li><a href="Hellblazer071.html">Hellblazer #71</li>
 <li><a href="Hellblazer072.html">Hellblazer #72</li>
+<li><a href="Hellblazer073.html">Hellblazer #73</li>
+<li><a href="Hellblazer074.html">Hellblazer #74</li>
+<li><a href="Hellblazer075.html">Hellblazer #75</li>
+<li><a href="Hellblazer076.html">Hellblazer #76</li>
+<li><a href="Hellblazer077.html">Hellblazer #77</li>
+<li><a href="Hellblazer078.html">Hellblazer #78</li>
+<li><a href="Hellblazer079.html">Hellblazer #79</li>
+<li><a href="Hellblazer080.html">Hellblazer #80</li>
+<li><a href="Hellblazer081.html">Hellblazer #81</li>
+<li><a href="Hellblazer082.html">Hellblazer #82</li>
+<li><a href="Hellblazer083.html">Hellblazer #83</li>
+<li><a href="Hellblazer084.html">Hellblazer #84</li>
+<li><a href="Hellblazer085.html">Hellblazer #85</li>
+<li><a href="Hellblazer086.html">Hellblazer #86</li>
+<li><a href="Hellblazer087.html">Hellblazer #87</li>
+<li><a href="Hellblazer088.html">Hellblazer #88</li>
+<li><a href="Hellblazer089.html">Hellblazer #89</li>
+<li><a href="Hellblazer090.html">Hellblazer #90</li>
+<li><a href="Hellblazer091.html">Hellblazer #91</li>
+<li><a href="Hellblazer092.html">Hellblazer #92</li>
+<li><a href="Hellblazer093.html">Hellblazer #93</li>
+<li><a href="Hellblazer094.html">Hellblazer #94</li>
+<li><a href="Hellblazer095.html">Hellblazer #95</li>
+<li><a href="Hellblazer096.html">Hellblazer #96</li>
+<li><a href="Hellblazer097.html">Hellblazer #97</li>
+<li><a href="Hellblazer098.html">Hellblazer #98</li>
+<li><a href="Hellblazer099.html">Hellblazer #99</li>
+<li><a href="Hellblazer100.html">Hellblazer #100</li>
+
 </ul>
 </body>
 </html>
