--- a/AllWinners1941/AllWinners01.html
+++ b/AllWinners1941/AllWinners01.html
@@ -9,8 +9,22 @@
 <body>
 All Winners<br>
 <img src="AllWinners01.jpg"> <br>
+<ul>
+<li>Cover art by Alex Schomburg.</li>
+<li>The Angel and Black Marvel only appearance.</li>
 <p>
-
+<li>"Carnival of Fiends", script and art by Carl Burgos.<br>
+Deep in the heart of Chinatown, a secret Japanese agent, acting on orders from his superiors, menaces the peaceful Chinese population of New York, even planning to hypnotize the Torch and Toro into becoming his agents!</li>
+</p><p>
+<li>"The Order of the Hood", script by Stan Lee, art by Al Avison<br>
+The Black Marvel is forced to face the threat of a new villain and his massive organization, which threatens to inflict a reign of horror upon the American people.</li> 
+</p><p>
+<li>"The Case of the Hollow Men" starring Captain America, script by Jack Kirby and Joe Simon, pencils by Jack Kirby and Al Avison, inks by Joe Simon, Al Gabriele, and Syd Shores.</li>
+<li>House ad Captain America and Marvel Mystery Comics.</li>
+<li>"The Torpedo Boat Terror" starring The Sub-Mariner, script and art by Bill Everett.</li>
+<li>"The Case of the Mad Gargoyle" starring The Angel.</li>
+<li>Promotional ad featuring Cap and Bucky, encouraging readers to join the Sentinels of Liberty.</li>
+<li>First appearance of All-Winners Squad in text story by Stan Lee.</li>
 </p>
 </body>
 </html>
