--- a/AllWinners1941/AllWinners02.html
+++ b/AllWinners1941/AllWinners02.html
@@ -9,8 +9,18 @@
 <body>
 All Winners<br>
 <img src="AllWinners02.jpg"> <br>
-<p>
-
+<ul>
+<li>Carnival of Death!, script by Carl Burgos; Human Torch and Toro set out to solve the murder of Jimmy Mack, part owner of an old vaudeville theatre years back, who started a fire to collect insurance money because the show was doing poorly.</li> 
+</p><p>
+<li>The Strange Case of the Malay Idol, script by Jack Kirby and Joe Simon, pencils by Jack Kirby, inks by Joe Simon. Captain America and Bucky crash on an island in the Pacific while escorting Colonel Carter, who is carrying some vital secret documents, to an important meeting in Singapore.</li>
+</p><p> 
+<li>Promotional advertisement for USA Comics #2.</li>
+<li>Bombs of Doom starring The Destroyer, art by Jack Binder.</li>
+<li>Winners All text story by Stan Lee, art by Jack Kirby.</li>
+<li>Plague of the Poisoned Jewelry starring the Whizzer, script by Stan Lee, art by Paul Reinman.</li>
+<li>The Ghost Fleet starring The Sub-Mariner.</li>
+<li>Ad for Mystic Comics #6.</li>
+<li>Ad for Young Allies Comics #1.</li>
 </p>
 </body>
 </html>
