--- a/AllWinners1941/AllWinners03.html
+++ b/AllWinners1941/AllWinners03.html
@@ -9,8 +9,16 @@
 <body>
 All Winners<br>
 <img src="AllWinners03.jpg"> <br>
-<p>
-
+<ul>
+<li>The Case of the Black Dragon Society; After the mysterious suicide of a agent of the Black Dragon Society, who has just killed the owner of many oil wells, the Human Torch and Toro head east to see the owner of one of those wells, discovering the Japanese plan to blow up its pipeline.</li>
+</p><p>
+<li>The Canvas of Doom!, script by Stan Lee, art by Al Avison; Cap and Bucky come face to face with a lunatic artist, who paints portraits of his victims in the act or throes of death, then invites them to view the canvas, which hypnotizes them into doing away with themselves.</li>
+</p><p>
+<li>Terror Prison starring the Whizzer, script by Stan Lee, pencils by Mike Sekowsky.</li> 
+<li>Jungle Drums text story.</li>
+<li>The Ship of Horrors starring The Sub-Mariner, script and art by Bill Everett.</li>
+<li>Ad for Young Allies Comics #2.</li>
+<li>The Secret Tunnel of Death! starring The Destroyer.</li>
 </p>
 </body>
 </html>
