--- a/AllWinners1941/AllWinners04.html
+++ b/AllWinners1941/AllWinners04.html
@@ -9,8 +9,20 @@
 <body>
 All Winners<br>
 <img src="AllWinners04.jpg"> <br>
-<p>
-
+<ul>
+<li>Cover art by Al Avison.
+</p><p> 
+<li>The Terror of the Slimy Japs!, script and art by Carl Burgos. The Human Torch and Toro, now that war against Japan has been declared, must face the murder, crime and sabotage that Moppino, the high priest of the rising sun temple, wishes to perpetrate against the city of New York.</li> 
+</p><p>
+<li>The Sorceror's Sinister Secret!; Steve and Bucky are allowed to go and see a magician's act, but when Mysto uses the Colonel of the post in his act, and they BOTH disappear, Captain America and Bucky head to "Sorcerer's Hollow" to track them down. 
+</p><p>
+<li>Illustrated ad, encouraging readers to join Captain America's Sentinels of Liberty.</li>
+<li>Crime On the Rampage starring The Whizzer, art by Howard James.</li>
+<li>Miser's Gold! text story.</li>
+<li>Sub-Mariner Combats the Sinister Horde! starring The Sub-Mariner, art by Bill Everett.</li>
+<li>Ad for Joker Comics #2, art by Basil Wolverton and Lee King.</li>
+<li>Death To the Nazi Scourge! starring The Destroyer.</li>
+<li>Ad for Young Allies Comics #3.</li>
 </p>
 </body>
 </html>
