--- a/AllWinners1941/AllWinners05.html
+++ b/AllWinners1941/AllWinners05.html
@@ -9,8 +9,17 @@
 <body>
 All Winners<br>
 <img src="AllWinners05.jpg"> <br>
+<ul>
+<li>Invading the Nazis' Secret Plan, inks by Carl Burgos; Torch and Toro discover that the Nazis are operating out of a steamship anchored to a pier at Coney Island, intending to deliver a bomb [along with needed tanks of oxygen] to a hospital in order to kill thousands.</li>
 <p>
-
+<li>The Vampire Strikes!, pencils by Al Avison, inks by Don Rico; Cap and Bucky must face the threat created by the world's greatest master of occult medicine, Dr. Togu, who has forsaken the dropping of disease bombs on the Chinese people to inflict yet a new terror upon America: a vampire!</li>
+</p><p>
+<li>Ad encouraging readers to join Cap's Sentinels of Liberty.</li>
+<li>Speed On the Rampage starring the Whizzer, art by Howard James.</li>
+<li>The Man in the Moon text story by Mickey Spillane.</li>
+<li>The Hermit's Island of Glittering Gold starring Sub-Mariner, pencils by Bill Everett.</li>
+<li>The Demon's Deadly Secret starring the Destroyer, art by John Forte.</li>
 </p>
+</ul>
 </body>
 </html>
