--- a/TwistedTales/TwistedTales11.html
+++ b/TwistedTales/TwistedTales11.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../../../ZimStyles.css">
+<link rel="stylesheet" href="../ZimStyles.css">
 <title>Twisted Tales 3D</title>
 </head>
 
