--- a/Weirdo/Weirdo.html
+++ b/Weirdo/Weirdo.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Weirdo</title>
 </head>
 
 <body>
-<h2>Weirdo</h2>
 <img src="Weirdo01.jpg"> <br>
 Creator: Robert Crumb<br>
 Series: on-going, 28 issues<br>
@@ -20,9 +20,50 @@ Weirdo served as a "low art" counterpoint to its contemporary highbrow Raw. Earl
 With issue #10, Crumb later handed over the editing reins to Bagge; with issue #18, the reins went to Crumb's wife, cartoonist Aline Kominsky-Crumb (except for issue #25, which was again edited by Bagge). The three editorial tenures were known respectively as "Personal Confessions," the "Coming of the Bad Boys," and the "Twisted Sisters."
 </p><p>
 Weirdo's final issue, #28, an internationally themed 68-page giant titled Verre D'eau (in French, "glass of water"), was published in 1993.
-</p>
-Issues:<ul>
-<li><a href="Weirdo.html">Weirdo #1</a></li>
+</p><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Weirdo01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Weirdo28.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+<ul>
+<li><a href="Weirdo1.html">Weirdo #1</a></li>
 <li><a href="Weirdo2.html">Weirdo #2</a></li>
 <li><a href="Weirdo3.html">Weirdo #3</a></li>
 <li><a href="Weirdo4.html">Weirdo #4</a></li>
