--- a/Weirdo/Weirdo13.html
+++ b/Weirdo/Weirdo13.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../../../ZimStyles.css">
+<link rel="stylesheet" href="../ZimStyles.css">
 <title>Weirdo</title>
 </head>
 
@@ -11,36 +11,7 @@
 <img src="Weirdo13.jpg">
 <p>
 </p>
-Issues:<ul>
-<li><a href="Weirdo.html">Weirdo #1</a></li>
-<li><a href="Weirdo2.html">Weirdo #2</a></li>
-<li><a href="Weirdo3.html">Weirdo #3</a></li>
-<li><a href="Weirdo4.html">Weirdo #4</a></li>
-<li><a href="Weirdo5.html">Weirdo #5</a></li>
-<li><a href="Weirdo6.html">Weirdo #6</a></li>
-<li><a href="Weirdo7.html">Weirdo #7</a></li>
-<li><a href="Weirdo8.html">Weirdo #8</a></li>
-<li><a href="Weirdo9.html">Weirdo #9</a></li>
-<li><a href="Weirdo10.html">Weirdo #10</a></li>
-<li><a href="Weirdo11.html">Weirdo #11</a></li>
-<li><a href="Weirdo12.html">Weirdo #12</a></li>
-<li><a href="Weirdo13.html">Weirdo #13</a></li>
-<li><a href="Weirdo14.html">Weirdo #14</a></li>
-<li><a href="Weirdo15.html">Weirdo #15</a></li>
-<li><a href="Weirdo16.html">Weirdo #16</a></li>
-<li><a href="Weirdo17.html">Weirdo #17</a></li>
-<li><a href="Weirdo18.html">Weirdo #18</a></li>
-<li><a href="Weirdo19.html">Weirdo #19</a></li>
-<li><a href="Weirdo20.html">Weirdo #20</a></li>
-<li><a href="Weirdo21.html">Weirdo #21</a></li>
-<li><a href="Weirdo22.html">Weirdo #22</a></li>
-<li><a href="Weirdo23.html">Weirdo #23</a></li>
-<li><a href="Weirdo24.html">Weirdo #24</a></li>
-<li><a href="Weirdo25.html">Weirdo #25</a></li>
-<li><a href="Weirdo26.html">Weirdo #26</a></li>
-<li><a href="Weirdo27.html">Weirdo #27</a></li>
-<li><a href="Weirdo28.html">Weirdo #28</a></li>
-</ul>
+
 
 </body>
 </html>
