--- a/Xmen/xmen.html
+++ b/Xmen/xmen.html
@@ -2,23 +2,87 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../../../ZimStyles.css">
-<title>X-Men</title>
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
+<title>the X-Men</title>
 </head>
 
 <body>
-<h2>X-Men</h2>
-<img src="Xmen001.jpg"> <br>
+<img src="Xmen001.jpg" title="X-Men #1 1963"> <br>
 Created by: Jack Kirby<br>
 Publisher: 1963 - current Marvel<br>
-Series: is such a big mess, I'm dumping them all here, except <a href="../AgeOfApocalypse/AgeOfApocalypse.html">Age of Apocalypse</a> which is a separate X-Men ball of mess, and <a href="../XmenTeenTitans/xmenteentitans.html">X-Men Teen Titans</a> because that is a Marvel DC crossover and it deserves it's own.<br>
+Series: 141 issues 1963 - 1981<br>
 <p>
-About: Created by writer Stan Lee and artist/co-writer Jack Kirby, the characters are among the most recognizable and successful intellectual properties of Marvel Comics, appearing in numerous books, television shows, films, and video games.
+Created by writer Stan Lee and artist/co-writer Jack Kirby, the characters are among the most recognizable and successful intellectual properties of Marvel Comics, appearing in numerous comic title branches, books, television shows, films, and video games.
 </p><p>
 The X-Men are mutants, a subspecies of humans who are born with superhuman abilities. The X-Men fight for peace and equality between normal humans and mutants in a world where antimutant bigotry is fierce and widespread.
 </p><p>
-#1 Story: After a day of training and meeting Jean Grey, a new student at Professor X's school, the X-Men go one their first assignment, stopping a mutant named Magneto from talking over an Air Force base.
-</p><p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Xmen001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen012.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen013.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen014.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen015.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen016.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen017.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen018.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen019.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen020.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen021.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen022.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen023.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen024.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen025.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen026.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen027.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen028.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen029.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen030.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen031.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen032.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen033.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen034.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen035.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen036.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen037.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen038.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen039.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen040.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen041.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen042.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen043.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen044.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen045.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen046.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen047.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen048.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen049.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Xmen050.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+
+<ul>
+<li><a href="Xmen001.html">X-Men #1</a></li>
+</ul>
 Titles:<br>
 <a href="../X-MenAdventures/XmenAdventures.html">Adventures of the X-Men</a> Cartoon adaptation series <br>
 All-New X-Factor #1-20 (January 2014 - January 2015)	Marvel<br>
